--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-screens": "~3.18.0",
     "@react-navigation/native": "*",
     "@react-navigation/native-stack": "*",
-    "react-native-safe-area-context": "4.4.1"
+    "react-native-safe-area-context": "4.4.1",
+    "expo-font": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
