--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.12",
+    "@react-navigation/native": "*",
+    "@react-navigation/native-stack": "*",
+    "expo": "^47.0.13",
+    "expo-camera": "~13.1.0",
+    "expo-cli": "^6.3.0",
+    "expo-font": "~10.2.0",
+    "expo-media-library": "~15.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-screens": "~3.18.0",
-    "@react-navigation/native": "*",
-    "@react-navigation/native-stack": "*",
     "react-native-safe-area-context": "4.4.1",
-    "expo-font": "~10.2.0"
+    "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
